First review of project structure.